--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -7,3 +7,11 @@ repository.workspace = true
 version.workspace = true
 
 [dependencies]
+async-trait.workspace = true
+iso_currency = { workspace = true, features = ["with-serde"] }
+reqwest.workspace = true
+rust_decimal = { workspace = true, features = ["serde"] }
+serde = { workspace = true, features = ["derive"] }
+serde_json.workspace = true
+strum = { workspace = true, features = ["derive"] }
+strum_macros.workspace = true
