--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -8,10 +8,10 @@ version.workspace = true
 
 [dependencies]
 async-trait.workspace = true
-iso_currency = { workspace = true, features = ["with-serde"] }
+iso_currency.workspace = true
+luhn3.workspace = true
 reqwest.workspace = true
-rust_decimal = { workspace = true, features = ["serde"] }
-serde = { workspace = true, features = ["derive"] }
-serde_json.workspace = true
+rust_decimal.workspace = true
+secrecy.workspace = true
 strum = { workspace = true, features = ["derive"] }
 strum_macros.workspace = true
