--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -8,10 +8,12 @@ version.workspace = true
 
 [dependencies]
 async-trait.workspace = true
+codes-iso-3166.workspace = true
+email_address.workspace = true
+iban_validate.workspace = true
 iso_currency.workspace = true
 luhn3.workspace = true
-reqwest.workspace = true
 rust_decimal.workspace = true
-secrecy.workspace = true
-strum = { workspace = true, features = ["derive"] }
 strum_macros.workspace = true
+zeroize.workspace = true
+zeroize_derive.workspace = true
