--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ iban_validate = { version = "5", default-features = false }
 iso_currency = { version = "0.5", default-features = false }
 luhn3 = { version = "1", default-features = false }
 rust_decimal = { version = "1", default-features = false }
+strum = { version = "0.27.2", default-features = false, features = ["derive"] }
 strum_macros = { version = "0.27", default-features = false }
+thiserror = { version = "2.0.17", default-features = false }
 zeroize = { version = "1", default-features = false }
 zeroize_derive = { version = "1", default-features = false }
